<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="332dp"
        android:layout_height="664dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="1dp"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/kernelProcessorTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kernel_processor_time"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/kernelProcessorTimeText"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:paddingLeft="4pt"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/userProcessorTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_processor_time"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/userProcessorTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:paddingLeft="4pt"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/totalProcessorTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_processor_time"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/totalProcessorTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:paddingLeft="4pt"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/workingSetSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/working_set_size"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/workingSetSizeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:paddingLeft="4pt"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/privateMemorySize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_memory_size"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/privateMemorySizeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:paddingLeft="4pt"
                android:text="" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>